k8s/flux_k3s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flux-system
