k8s/debug.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu
  namespace: homeassistant
spec:
  selector:
    matchLabels:
      app: ubuntu
  replicas: 1
  template:
    metadata:
      labels:
        app: ubuntu
    spec:
      nodeName: jack
      containers:
      - name: home-assistant
        image: ubuntu
        command: [ "/bin/bash", "-c", "--" ]
        args: [ "while true; do sleep 30; done;" ]
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      # - name: config
      #   persistentVolumeClaim:
      #     claimName: config
      - name: config
        nfs:
          server: 192.168.2.6
          path: /bucket/k8s/lab/homeassistant
