k8s/solana-nft.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: solana-nft

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solana-figment
  namespace: solana-nft
  labels:
    app: solana-figment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solana-figment
  template:
    metadata:
      labels:
        app: solana-figment
    spec:
      containers:
      - name: rpc-endpoint
        image: ghcr.io/rssnyder/solana-figment-rpc-endpoint-cors-gcr:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: solana-figment-rpc-endpoint
  namespace: solana-nft
spec:
  selector:
    app: solana-figment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: potatoy-960310451953106964
  namespace: solana-nft
  labels:
    app: potatoy-960310451953106964
spec:
  replicas: 1
  selector:
    matchLabels:
      app: potatoy-960310451953106964
  template:
    metadata:
      labels:
        app: potatoy-960310451953106964
    spec:
      containers:
      - name: solananftbot
        image: ghcr.io/rssnyder/solananftbot:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: potatoy-931127052394987553
  namespace: solana-nft
  labels:
    app: potatoy-931127052394987553
spec:
  replicas: 1
  selector:
    matchLabels:
      app: potatoy-931127052394987553
  template:
    metadata:
      labels:
        app: potatoy-931127052394987553
    spec:
      containers:
      - name: solananftbot
        image: ghcr.io/rssnyder/solananftbot:latest
