k8s/ff-proxy.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ff-proxy
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: ff-proxy.k8s.rileysnyder.dev
      http:
        paths:
          - path: /ff-proxy(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name:  ff-proxy-read-replica
                port:
                  number: 7000
